feat: 实现消息引用回复后端链路